Added Asks controls to swagger and re-generated the api
