# python-flask-server/swagger_server/models/ask.py
@@ -1,0 +1,262 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.investor import Investor  # noqa: F401,E501
+from swagger_server.models.new_ask import NewAsk  # noqa: F401,E501
+from swagger_server import util
+
+
+class Ask(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, quantity: int=None, price: int=None, id: int=None, seller: Investor=None, status: str=None, active: bool=True, created: datetime=None, modified: datetime=None):  # noqa: E501
+        """Ask - a model defined in Swagger
+
+        :param quantity: The quantity of this Ask.  # noqa: E501
+        :type quantity: int
+        :param price: The price of this Ask.  # noqa: E501
+        :type price: int
+        :param id: The id of this Ask.  # noqa: E501
+        :type id: int
+        :param seller: The seller of this Ask.  # noqa: E501
+        :type seller: Investor
+        :param status: The status of this Ask.  # noqa: E501
+        :type status: str
+        :param active: The active of this Ask.  # noqa: E501
+        :type active: bool
+        :param created: The created of this Ask.  # noqa: E501
+        :type created: datetime
+        :param modified: The modified of this Ask.  # noqa: E501
+        :type modified: datetime
+        """
+        self.swagger_types = {
+            'quantity': int,
+            'price': int,
+            'id': int,
+            'seller': Investor,
+            'status': str,
+            'active': bool,
+            'created': datetime,
+            'modified': datetime
+        }
+
+        self.attribute_map = {
+            'quantity': 'quantity',
+            'price': 'price',
+            'id': 'id',
+            'seller': 'seller',
+            'status': 'status',
+            'active': 'active',
+            'created': 'created',
+            'modified': 'modified'
+        }
+
+        self._quantity = quantity
+        self._price = price
+        self._id = id
+        self._seller = seller
+        self._status = status
+        self._active = active
+        self._created = created
+        self._modified = modified
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Ask':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Ask of this Ask.  # noqa: E501
+        :rtype: Ask
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def quantity(self) -> int:
+        """Gets the quantity of this Ask.
+
+
+        :return: The quantity of this Ask.
+        :rtype: int
+        """
+        return self._quantity
+
+    @quantity.setter
+    def quantity(self, quantity: int):
+        """Sets the quantity of this Ask.
+
+
+        :param quantity: The quantity of this Ask.
+        :type quantity: int
+        """
+        if quantity is None:
+            raise ValueError("Invalid value for `quantity`, must not be `None`")  # noqa: E501
+
+        self._quantity = quantity
+
+    @property
+    def price(self) -> int:
+        """Gets the price of this Ask.
+
+
+        :return: The price of this Ask.
+        :rtype: int
+        """
+        return self._price
+
+    @price.setter
+    def price(self, price: int):
+        """Sets the price of this Ask.
+
+
+        :param price: The price of this Ask.
+        :type price: int
+        """
+        if price is None:
+            raise ValueError("Invalid value for `price`, must not be `None`")  # noqa: E501
+
+        self._price = price
+
+    @property
+    def id(self) -> int:
+        """Gets the id of this Ask.
+
+
+        :return: The id of this Ask.
+        :rtype: int
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: int):
+        """Sets the id of this Ask.
+
+
+        :param id: The id of this Ask.
+        :type id: int
+        """
+        if id is None:
+            raise ValueError("Invalid value for `id`, must not be `None`")  # noqa: E501
+
+        self._id = id
+
+    @property
+    def seller(self) -> Investor:
+        """Gets the seller of this Ask.
+
+
+        :return: The seller of this Ask.
+        :rtype: Investor
+        """
+        return self._seller
+
+    @seller.setter
+    def seller(self, seller: Investor):
+        """Sets the seller of this Ask.
+
+
+        :param seller: The seller of this Ask.
+        :type seller: Investor
+        """
+
+        self._seller = seller
+
+    @property
+    def status(self) -> str:
+        """Gets the status of this Ask.
+
+        Bid Status  # noqa: E501
+
+        :return: The status of this Ask.
+        :rtype: str
+        """
+        return self._status
+
+    @status.setter
+    def status(self, status: str):
+        """Sets the status of this Ask.
+
+        Bid Status  # noqa: E501
+
+        :param status: The status of this Ask.
+        :type status: str
+        """
+        allowed_values = ["open", "cancelled", "completed"]  # noqa: E501
+        if status not in allowed_values:
+            raise ValueError(
+                "Invalid value for `status` ({0}), must be one of {1}"
+                .format(status, allowed_values)
+            )
+
+        self._status = status
+
+    @property
+    def active(self) -> bool:
+        """Gets the active of this Ask.
+
+
+        :return: The active of this Ask.
+        :rtype: bool
+        """
+        return self._active
+
+    @active.setter
+    def active(self, active: bool):
+        """Sets the active of this Ask.
+
+
+        :param active: The active of this Ask.
+        :type active: bool
+        """
+
+        self._active = active
+
+    @property
+    def created(self) -> datetime:
+        """Gets the created of this Ask.
+
+
+        :return: The created of this Ask.
+        :rtype: datetime
+        """
+        return self._created
+
+    @created.setter
+    def created(self, created: datetime):
+        """Sets the created of this Ask.
+
+
+        :param created: The created of this Ask.
+        :type created: datetime
+        """
+
+        self._created = created
+
+    @property
+    def modified(self) -> datetime:
+        """Gets the modified of this Ask.
+
+
+        :return: The modified of this Ask.
+        :rtype: datetime
+        """
+        return self._modified
+
+    @modified.setter
+    def modified(self, modified: datetime):
+        """Sets the modified of this Ask.
+
+
+        :param modified: The modified of this Ask.
+        :type modified: datetime
+        """
+
+        self._modified = modified
