# swagger.yaml
@@ -12,7 +12,7 @@ info:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
   version: "0.1.0"
-host: "localhost:8080"
+host: "api.sunvibe.vn"
 basePath: "/v1"
 tags:
 - name: "bid"
@@ -91,7 +91,7 @@ paths:
       tags:
       - "bid"
       description: "Returns a user based on a single ID, if the user does not have access to the pet"
-      operationId: "getBidById"
+      operationId: "getBid"
       produces:
         - "application/json"
       parameters:
@@ -155,7 +155,7 @@ paths:
       tags:
       - "bid"
       description: "deletes a single bet based on the ID supplied"
-      operationId: "deleteBid"
+      operationId: "delBid"
       parameters:
         - name: "id"
           in: "path"
@@ -174,6 +174,219 @@ paths:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/ErrorModel"
+      security:
+      - OAuth2:
+        - "investor"
+  /fok-bids:
+    post:
+      tags:
+      - "bid"
+      summary: "Fill or kill bids"
+      description: "Only accept existing ask - selling request"
+      operationId: "fokBid"
+      consumes:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Bid object that needs to be added to the market"
+        required: true
+        schema:
+          $ref: "#/definitions/NewBid"
+      responses:
+        204:
+          description: "Deal succeed"
+        405:
+          description: "Invalid input"
+        default:
+          description: "Unexpected error"
+          schema:
+            $ref: '#/definitions/ErrorModel'
+      security:
+      - OAuth2:
+        - "investor"
+  /asks:
+    get:
+      tags:
+      - "ask"
+      summary: "List Asks"
+      description: "Multiple status values can be provided with comma separated strings"
+      operationId: "listAsks"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "status"
+        in: "query"
+        description: "Status values that need to be considered for filter"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+          enum:
+          - "available"
+          - "pending"
+          - "sold"
+          default: "available"
+        collectionFormat: "multi"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Ask"
+        400:
+          description: "Invalid status value"
+        default:
+          description: unexpected error
+          schema:
+            $ref: '#/definitions/ErrorModel'
+    post:
+      tags:
+      - "ask"
+      summary: "Add a new ask to the market"
+      description: "Add token buying offering"
+      operationId: "addAsk"
+      consumes:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Ask object that needs to be added to the market"
+        required: true
+        schema:
+          $ref: "#/definitions/NewAsk"
+      responses:
+        201:
+          description: "Created"
+        405:
+          description: "Invalid input"
+        default:
+          description: "Unexpected error"
+          schema:
+            $ref: '#/definitions/ErrorModel'
+      security:
+      - OAuth2:
+        - "investor"
+  /asks/{id}:
+    get:
+      tags:
+      - "ask"
+      description: "Returns a user based on a single ID, if the user does not have access to the pet"
+      operationId: "getAsk"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of ask to fetch"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Ask"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Ask not found"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/ErrorModel"
+    put:
+      tags:
+      - "ask"
+      summary: "Update an existing ask"
+      description: ""
+      operationId: "updateAsk"
+      consumes:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of ask to fetch"
+        required: true
+        type: "integer"
+        format: "int64"
+      - in: "body"
+        name: "body"
+        description: "Ask object that needs to be added to the store"
+        required: true
+        schema:
+          $ref: "#/definitions/Ask"
+      responses:
+        201:
+          description: "Updated"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Ask not found"
+        405:
+          description: "Validation exception"
+        default:
+          description: "Unexpected error"
+          schema:
+            $ref: '#/definitions/ErrorModel'
+      security:
+      - OAuth2:
+        - "investor"
+    delete:
+      tags:
+      - "ask"
+      description: "deletes a single bet based on the ID supplied"
+      operationId: "delAsk"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of ask to delete"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "204":
+          description: "ask deleted"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Ask not found"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/ErrorModel"
+      security:
+      - OAuth2:
+        - "investor"
+  /fok-asks:
+    post:
+      tags:
+      - "ask"
+      summary: "Fill or kill asks"
+      description: "Only accept existing ask - selling request"
+      operationId: "fokAsk"
+      consumes:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Ask object that needs to be added to the market"
+        required: true
+        schema:
+          $ref: "#/definitions/NewAsk"
+      responses:
+        204:
+          description: "Deal succeed"
+        405:
+          description: "Invalid input"
+        default:
+          description: "Unexpected error"
+          schema:
+            $ref: '#/definitions/ErrorModel'
+      security:
+      - OAuth2:
+        - "investor"
 securityDefinitions:
   BasicAuth:
     type: basic
@@ -210,6 +423,45 @@ definitions:
             type: "integer"
             format: "int64"
           bidder:
+            $ref: '#/definitions/Investor'
+          status:
+            type: "string"
+            description: "Bid Status"
+            enum:
+            - "open"
+            - "cancelled"
+            - "completed"
+          active:
+            type: "boolean"
+            default: true
+          created:
+            type: "string"
+            format: "date-time"
+          modified:
+            type: "string"
+            format: "date-time"
+        required:
+          - id
+  NewAsk:
+    type: object
+    properties:
+      quantity:
+        type: "integer"
+        format: "int32"
+      price:
+        type: "integer"
+        format: "int64"
+    required:
+      - quantity
+      - price
+  Ask:
+    allOf:
+      - $ref: '#/definitions/NewAsk'
+      - properties:
+          id:
+            type: "integer"
+            format: "int64"
+          seller:
             $ref: '#/definitions/Investor'
           status:
             type: "string"
